--- a/Project_Game_Online/Makefile
+++ b/Project_Game_Online/Makefile
@@ -1,7 +1,7 @@
 JFLAGS =
 JAVAC = javac
 JAVA = java
-LIB = src/.:lib/amqp-client-4.0.2.jar:lib/slf4j-api-1.7.21.jar:lib/slf4j-simple-1.7.22.jar
+LIB = src/.:lib/amqp-client-4.0.2.jar:lib/slf4j-api-1.7.21.jar:lib/slf4j-simple-1.7.22.jar:GUI/.
 
 .SUFFIXES: .java .class
 .java.class:
@@ -10,7 +10,8 @@ LIB = src/.:lib/amqp-client-4.0.2.jar:lib/slf4j-api-1.7.21.jar:lib/slf4j-simple-
 CLASSES = \
 		src/GameUtils.java \
 		src/GameServer.java \
-		src/GameClient.java
+		src/GameClient.java \
+		GUI/GUI.java 
 
 default: classes
 
@@ -18,9 +19,12 @@ classes: $(CLASSES:.java=.class)
 
 clean:
 		$(RM) src/*.class
+		$(RM) GUI/*.class
 
 runServer:
 	$(JAVA) -cp $(LIB) GameServer $(name)
     # @echo "argument is $(name)"
 runClient:
 	$(JAVA) -cp $(LIB) GameClient $(name)
+runGUI:
+	$(JAVA) -cp $(LIB) GUI $(node)
